# Sudoku-Game-C

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  vcpkg.json
include/: button.h  game.h  generator.h  generator_menu.h  gui.h  main_menu.h  select_menu.h  sudoku.h
src/: button.c  game.c  generator.c  generator_menu.c  gui.c  main.c  main_menu.c  select_menu.c  sudoku.c
